# reStream

./: .editorconfig  Cargo.toml  Dockerfile  LICENSE  README.md  default.nix  docker.sh  flake.nix  reDump.remarkable.shared  reStream.sh  restream.arm.static  shell.nix  zstd
.cargo/: config
.github/workflows/: check.yml
src/: main.rs
