[package]
name = "restream"
version = "1.3.1"
authors = ["Rien Maertens <rien.maertens@posteo.be>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
lz-fear = "0.1"
clap = { version = "4.4", features = [ "derive" ] }
libremarkable = { version = "0.6", features = [ "input" ], default-features = false }

