[package]
name = "restream"
version = "1.4.0"
authors = ["Rien Maertens <rien.maertens@posteo.be>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
lz-fear = "0.2"
clap = { version = "4.5", features = [ "derive" ] }
libremarkable = { version = "0.7", features = [ "input" ], default-features = false }
